교직원 추가, 리스트 히스토리 추가

--- a/src/main/webapp/assets/css/department_list.css
+++ b/src/main/webapp/assets/css/department_list.css
@@ -57,7 +57,7 @@ main > h1 {font-size: 36px; padding-bottom: 30px; margin-bottom: 30px; border-bo
 .popup .top_area {text-align: center; padding-bottom: 40px; border-bottom: 1px solid #ccc;}
 .popup .ico{width: 80px; height: 80px; text-align: center; background-color: #666; color: #fff; font-size: 36px; line-height: 70px;
             border-radius: 999px; display: inline-block;}
-.popup .top_area h2 {margin-top: 20px; font-size: 24px;}
+.popup .top_area h2 {margin-top: 20px; font-size: 24px; margin-bottom: 7px;}
 .popup .pager_area p {margin-top: 10px; color: #555;}
 
 .popup .content_area {padding: 40px 0; width: 350px; margin: 0 auto; font-size: 0;}
@@ -70,5 +70,7 @@ main > h1 {font-size: 36px; padding-bottom: 30px; margin-bottom: 30px; border-bo
 .btn_area button {border: 0; font-size: 18px; padding: 10px 30px; margin: 0 10px; color: #fff;}
 .btn_area #add_dep {background-color: #999;}
 .btn_area #add_dep:hover {background-color: #333;}
+.btn_area #modify_dep {background-color: #999;}
+.btn_area #modify_dep:hover {background-color: #333;}
 .btn_area #cancel_dep { background-color: rgb(255,194,194);}
 .btn_area #cancel_dep:hover { background-color: rgb(255,83,83);}
